--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="SUSHI, ECOMMERCE, COMIDA, FOOD">
     <title>TodoSushi</title>
+    <link rel="icon" type="imagen/jpg" href="../imagenes-carousel/logotodosushi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -50,27 +52,35 @@
            <a href="./otros/formulario.html" class="boton">Formulario</a>
         </div>
       </main>
-      <footer>
-        <div class="icon">
-            <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-            </svg>
-            <i class='bx bxl-instagram'></i>
+      <footer class="footer-distributed bg-dark">
+        <div class="footer-left">
+					<img src="./imagenes-carousel/logotodosushi.png" alt="Logo de la empresa" class="footer-logo-company">
+				</div>
+        <div class="footer-center">
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Fonrouge 3545</span> Florencio Varela, Buenos aires</p>
+          </div>
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+54 9 11 7024-9638</p>
+          </div>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p>ignaciocaffa.8@gmail.com</p>
+          </div>
         </div>
-        <div class="icon">
-            <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-            </svg>
-            <i class='bx bxl-facebook-circle'></i>
+        <div class="footer-right">
+          <p class="footer-company-about">
+            <span class="footer-seguinos">Seguinos en nuestras redes</span>
+          </p>
+          <div class="footer-icons">
+            <box-icon name='facebook' type='logo' class="icono-fb bg-primary"></box-icon>
+            <box-icon name='whatsapp' type='logo' class="icono-wp bg-success"></box-icon>
+            <box-icon type='logo' name='instagram' class="icono-ig bg-danger"></box-icon>
+          </div>
         </div>
-
-        <div class="icon">
-            <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-            </svg>
-            <i class='bx bxl-whatsapp' ></i>
-        </div>
-    </footer>
+      </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
