--- a/otros/formulario.html
+++ b/otros/formulario.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="CONTACTO, sobrenosotros, formulario, SUSHI">
     <title>Formulario / TodoSushi</title>
+    <link rel="icon" type="imagen/jpg" href="../imagenes-carousel/logotodosushi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../styles/styles.css">
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
       <header>
@@ -40,89 +42,89 @@
         </nav>
       </header>
       <section class="formulario text-white">
-        <form class="row g-3">
-            <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">E-mail</label>
-              <input type="email" class="form-control" id="inputEmail4" placeholder="Ingrese su E-mail">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress" class="form-label">Direccion</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Ingrese su direccion">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress2" class="form-label">Numero de piso/departamento</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Piso, departamento, especificaciones.">
-            </div>
-            <div class="col-md-6">
-              <label for="inputnumber" class="form-label">Numero de Telefono</label>
-              <input type="number" class="form-control" id="inputCity" placeholder="Ingrese su numero de Telefono">
-            </div>
-            <div class="col-md-4">
-              <label for="inputState" class="form-label">Provincia</label>
-              <select id="inputState" class="form-select">
-                <option selected>CABA</option>
-                <option selected>Buenos aires</option>
-                <option selected>Catamarca</option>
-                <option selected>Chaco</option>
-                <option selected>Chubut</option>
-                <option selected>Entre Rios</option>
-                <option selected>Rio Negro</option>
-                <option selected>Salta</option>
-                <option selected>Santa Cruz</option>
-                <option selected>Santa Fe</option>
-                <option selected>Tucuman</option>
-                <option selected>Cordoba</option>
-                <option selected>Corrientes</option>
-                <option selected>Formosa</option>
-                <option selected>Jujuy</option>
-                <option selected>La Pampa</option>
-                <option selected>La Rioja</option>
-                <option selected>Mendoza</option>
-                <option selected>Misiones</option>
-                <option selected>Neuquen</option>
-                <option selected>San Juan</option>
-                <option selected>San Luis</option>
-                <option selected>Santiago Del Estero</option>
-                <option selected>Tierra Del Fuego</option>
-              </select>
-            </div>
-            <div class="col-md-2">
-              <label for="inputZip" class="form-label">Codigo Postal</label>
-              <input type="text" class="form-control" id="inputZip">
-            </div>
-            <div class="col-12">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                  Acepto los<a href="#"><p>Terminos de privacidad.</p></a>
-                </label>
+        <div class="container">
+          <form>
+            <h2>Contactanos</h2>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="first">Nombres</label>
+                  <input type="text" class="form-control" placeholder="Ingrese sus Nombres" id="first">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="last">Apellidos</label>
+                  <input type="text" class="form-control" placeholder="Ingrese sus Apellidos" id="last">
+                </div>
               </div>
             </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary">Enviar</button>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="company">Localidad</label>
+                  <input type="text" class="form-control" placeholder="Ingrese su Localidad">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="phone">Telefono de contacto</label>
+                  <input type="tel" class="form-control" id="phone" placeholder="Ingrese su numero telefonico">
+                </div>
+              </div>
             </div>
+            <div class="row">
+              <div class="col-md-6">
+        
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+                </div>
+              </div>
+            </div>
+            <label for="contact-preference">¿Esta de acuerdo con que lo contactemos?</label>
+            <div class="radio">
+              <label>
+                <input type="radio" name="contact-preference" id="contact-preference" value="am" checked>Estoy de acuerdo
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="contact-preference" id="contact-preference" value="pm" checked>No estoy de acuerdo
+              </label>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
+        </div>
       </section>
-        <footer>
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-instagram'></i>
+      <footer class="footer-distributed bg-dark">
+        <div class="footer-left">
+					<img src="../imagenes-carousel/logotodosushi.png" alt="Logo de la empresa" class="footer-logo-company">
+				</div>
+        <div class="footer-center">
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Fonrouge 3545</span> Florencio Varela, Buenos aires</p>
           </div>
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-facebook-circle'></i>
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+54 9 11 7024-9638</p>
           </div>
-  
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-whatsapp' ></i>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p>ignaciocaffa.8@gmail.com</p>
           </div>
+        </div>
+        <div class="footer-right">
+          <p class="footer-company-about">
+            <span class="footer-seguinos">Seguinos en nuestras redes</span>
+          </p>
+          <div class="footer-icons">
+            <box-icon name='facebook' type='logo' class="icono-fb bg-primary"></box-icon>
+            <box-icon name='whatsapp' type='logo' class="icono-wp bg-success"></box-icon>
+            <box-icon type='logo' name='instagram' class="icono-ig bg-danger"></box-icon>
+          </div>
+        </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
