--- a/otros/sobrenosotros.html
+++ b/otros/sobrenosotros.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="SOBRE NOSOTROS, CONTACTANOS, SUSHI, COMIDA JAPONESA">
     <title>Sobre nosotros / TodoSushi</title>
+    <link rel="icon" type="imagen/jpg" href="../imagenes-carousel/logotodosushi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../styles/styles.css">
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
       <header>
@@ -43,42 +46,52 @@
         <h1 class="text-center bg-black text-light">
           TodoSushi
         </h1>
-        <h5 class="text-center text p-3">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+        <h5 class="p-3 bg-secondary">Somos un emprendimiento joven, enfocados en hacer un producto de calidad para nuestros consumidores.</h5>
         </div>
         <div>
-          <p class="text-center p-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, est! Incidunt in, <br> quisquam deserunt est corrupti ipsum! Ad tempora id incidunt earum itaque <br> laboriosam repellendus officiis ducimus dolores, reprehenderit quasi sint omnis laborum dolor <br> porro nihil neque possimus, facilis mollitia?</p>
+          <p class="p-3 bg-secondary">Una empresa familiar con un objetivo claro, hacer bien lo que hacemos y destacar ante el resto.</p>
         </div>
         <div>
-          <h6 class="text-center text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nisi provident sunt sit nostrum aspernatur, quaerat a dicta error numquam. Dignissimos consequatur illo doloremque, laudantium odit possimus vel ea magni rerum, perferendis facere voluptates rem eius labore sed dolor quam? Aliquam, incidunt! Nihil ad eum aperiam unde exercitationem, repellat nostrum.</h4>
+          <h6 class="text-light bg-dark">Nuestros objetivos se encuentran guiados por nuestros valores.</h4>
         </div>
         <div class="fdp">
-          <h6 class="text-center p-3">Lorem ipsum dolor sit amet consectetur adipisicing.</h6>
-          <p class=" p-3 h-100 d-flex align-items-center justify-content-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Nostrum reprehenderit atque aperiam velit vitae dolorum <br> facilis voluptatum, debitis, amet, soluta aliquam impedit <br> quidem architecto sit quisquam veniam ad at mollitia distinctio. <br> Corporis vero, consectetur ipsam qui vel quas ab eligendi!</p>
+          <p class=" p-3 h-100"><b>A continuacion, les mostramos un video de como trabajamos.. <br> Siempre con materiales frescos y en el dia</b></p>
         </div>
-        <div class="video d-flex justify-content-center">
+        <div class="video">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/955tUEWoZMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div>
+          <h5 class="text-center">Si desea conocer mas sobre nosotros, simplemente llamenos con el numero de contacto que se encuentra al final del sitio, o simplemente ingrese al <a href="./formulario.html" class="enlace-sb">formulario</a> y nosotros nos contactaremos a la brevedad.</h5>
+        </div>
       </main>
-        <footer>
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-instagram'></i>
+      <footer class="footer-distributed bg-dark">
+        <div class="footer-left">
+					<img src="../imagenes-carousel/logotodosushi.png" alt="Logo de la empresa" class="footer-logo-company">
+				</div>
+        <div class="footer-center">
+          <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>Fonrouge 3545</span> Florencio Varela, Buenos aires</p>
           </div>
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-facebook-circle'></i>
+          <div>
+            <i class="fa fa-phone"></i>
+            <p>+54 9 11 7024-9638</p>
           </div>
-  
-          <div class="icon">
-              <svg heigth="80" width="80">
-                  <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
-              </svg>
-              <i class='bx bxl-whatsapp' ></i>
+          <div>
+            <i class="fa fa-envelope"></i>
+            <p>ignaciocaffa.8@gmail.com</p>
           </div>
+        </div>
+        <div class="footer-right">
+          <p class="footer-company-about">
+            <span class="footer-seguinos">Seguinos en nuestras redes</span>
+          </p>
+          <div class="footer-icons">
+            <box-icon name='facebook' type='logo' class="icono-fb bg-primary"></box-icon>
+            <box-icon name='whatsapp' type='logo' class="icono-wp bg-success"></box-icon>
+            <box-icon type='logo' name='instagram' class="icono-ig bg-danger"></box-icon>
+          </div>
+        </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
