--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,53 +8,54 @@
     <link rel="icon" type="imagen/jpg" href="../imagenes-carousel/logotodosushi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
+    <script src="https://kit.fontawesome.com/59276a04be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./otros/variedades.html">Variedades</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./otros/menu.html">Menú</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="./otros/contactanos.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Contactanos
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./otros/formulario.html">Formulario</a></li>
-                    <li><a class="dropdown-item" href="./otros/sobrenosotros.html">Sobre Nosotros</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
+      <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand mt-2" href="./index.html">
+            <img src="./imagenes-carousel/logotodosushi.png" alt="" width="50" height="50" class="d-inline-block align-text-center">
+            TodoSushi
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="contenedordeitems navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./otros/menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./otros/variedades.html">Variedades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./otros/envios.html">Envios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./otros/formulario.html">Contactanos</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
       </header>
       <main class="maindelindex">
-        <div>
-         <h1 class="text-white d-flex justify-content-center">BIENVENIDOS A TODO SUSHI</h1>
-        </div> 
-        <div class="text-center">
-           <a href="./otros/menu.html" class="boton">Menù</a>
-           <a href="./otros/variedades.html" class="boton">Variedades</a>
-           <a href="./otros/sobrenosotros.html" class="boton">Sobre Nosotros</a>
-           <a href="./otros/formulario.html" class="boton">Formulario</a>
+        <div class="indexcont">
+          <h2 class="sub-in text-dark text-center">Todo Sushi</h2>
+          <p class="sub-in2 text-dark text-center">Tu comida japonesa de confianza</p>
+           <button type="button" class="botonindex btn btn-outline-light"><a href="./otros/formulario.html" class="text-black">Contactanos</a></button>
         </div>
       </main>
+      <section class="seccion-sobre-n bg-dark text-white h-15">
+        <h2 class="sub-sobre text-center">SOBRE NOSOTROS</h2>
+        <p class="text-center">Somos una empresa joven en pleno crecimiento. <br> Trabajamos con ingredientes totalmente frescos y del dia, por eso reserva el <a href="./otros/envios.html">envio</a> con anticipo.<br> Nuestros cocineros son chefs profesionales recibidos.</p>
+      </section>
       <footer class="footer-distributed bg-dark">
-        <div class="footer-left">
-					<img src="./imagenes-carousel/logotodosushi.png" alt="Logo de la empresa" class="footer-logo-company">
+        <div class="footer-left text-white">
+				  <p>Derechos de autor protegidos.</p>
 				</div>
         <div class="footer-center">
           <div>
@@ -75,9 +76,9 @@
             <span class="footer-seguinos">Seguinos en nuestras redes</span>
           </p>
           <div class="footer-icons">
-            <box-icon name='facebook' type='logo' class="icono-fb bg-primary"></box-icon>
-            <box-icon name='whatsapp' type='logo' class="icono-wp bg-success"></box-icon>
-            <box-icon type='logo' name='instagram' class="icono-ig bg-danger"></box-icon>
+            <a href="https://www.instagram.com/"><i class="icono-ig fa-brands fa-instagram"></i></a>
+            <a href="https://web.whatsapp.com/"><i class="icono-wp fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.facebook.com/"><i class="icono-fb fa-brands fa-facebook-f"></i></a>
           </div>
         </div>
       </footer>
