--- a/otros/envios.html
+++ b/otros/envios.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="CONTACTO, sobrenosotros, formulario, SUSHI">
-    <title>Formulario / TodoSushi</title>
+    <meta name="keywords" content="SOBRE NOSOTROS, CONTACTANOS, SUSHI, COMIDA JAPONESA">
+    <title>Envios / TodoSushi</title>
     <link rel="icon" type="imagen/jpg" href="../imagenes-carousel/logotodosushi.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
@@ -42,39 +42,31 @@
         </div>
       </nav>
       </header>
-      <main class="maindelform">
+      <main class="maindeenvios">
         <div class="indexcont">
-          <h2 class="sub-in text-dark text-center">Contacto</h2>
-          <p class="sub-in2 text-dark text-center">Formulario de contacto</p>
+          <h2 class="sub-in text-dark text-center">Envios</h2>
+          <p class="sub-in2 text-dark text-center">Conoce hasta donde nos acercamos</p>
         </div>
       </main>
-      <section class="formulario">
-        <div id="container">
-          <h1>C O N T A C T O</h1>
-          <div class="underline">
+      <section class="enviosfondo">
+          <div class="row gx-4 gx-lg-5 div__contenedor">
+              <div class="col-lg-6 col-md-6 text-center">
+                  <div class="mt-4">
+                      <div class="mb-2">
+                          <img src="../imagenes-carousel/enviogratis.png" alt="envios gratis">
+                      </div>
+                      <p class="text-muted">Realizamos envios gratis a Florencio Varela, Berazategui y alrededores, para mas informacion escribinos por el formulario de <a href="./formulario.html">contacto.</a></p>
+                  </div>
+              </div>
+              <div class="col-lg-6 col-md-6 text-center">
+                  <div class="mt-4">
+                      <div class="imagen-2 mb-2">
+                          <img src="../imagenes-carousel/enviosblock.png" alt="envios pagos">
+                      </div>
+                      <p class="text-muted">Si no perteneces a las zonas anteriormente nombradas contactate y te pasamos un presupuesto hasta tu zona.</p>
+                  </div>
+              </div>
           </div>
-          <form action="#" method="post" id="contact_form">
-            <div class="name">
-              <label for="name"></label>
-              <input type="text" placeholder="Nombre" name="name" id="name_input" required>
-            </div>
-            <div class="email">
-              <label for="email"></label>
-              <input type="email" placeholder="Email" name="email" id="email_input" required>
-            </div>
-            <div class="telephone">
-              <label for="name"></label>
-              <input type="text" placeholder="ingrese su numero" name="telephone" id="telephone_input" required>
-            </div>
-            <div class="message">
-              <label for="message"></label>
-              <textarea name="message" placeholder="Dejenos un mensaje" id="message_input" cols="30" rows="5" required></textarea>
-            </div>
-            <div class="submit">
-              <input type="submit" value="Enviar" id="form_button" />
-            </div>
-          </form>
-        </div>
       </section>
       <footer class="footer-distributed bg-dark">
         <div class="footer-left text-white">
