cambio del titulo de encabezado

--- a/otros/menu.html
+++ b/otros/menu.html
@@ -45,7 +45,7 @@
       <main class="maindelmenu">
         <div class="indexcont">
           <h2 class="sub-in text-dark text-center">Menù</h2>
-          <p class="sub-in2 text-dark text-center">Conoce nuestras variedades</p>
+          <p class="sub-in2 text-dark text-center">Conoce nuestro menù</p>
         </div>
       </main>
       <section class="galeria-menu">
