agrego imagenes al carousel

--- a/otros/variedades.html
+++ b/otros/variedades.html
@@ -57,6 +57,12 @@
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7" aria-label="Slide 8"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="8" aria-label="Slide 9"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="9" aria-label="Slide 10"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="10" aria-label="Slide 11"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="11" aria-label="Slide 12"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
@@ -99,6 +105,34 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-white"><b>Nigiri de tamago</b></h5>
                 <p class="text-white">bola de arroz con tortilla japonesa.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="../imagenes-carousel/imagen1.jpeg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white"><b>Tunaroll</b></h5>
+                <p class="text-white">Roll de atun palta y kanikama.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="../imagenes-carousel/imagen2.jpeg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white"><b>Chicken roll</b></h5>
+                <p class="text-white">Roll de pollo con queso cheddar.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="../imagenes-carousel/imagen3.jpeg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white"><b>Geisha</b></h5>
+                <p class="text-white">Geisha de salmon con philadelphia.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="../imagenes-carousel/imagen4.jpeg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white"><b>California roll</b></h5>
+                <p class="text-white">Roll de atunes con philadelphia envuelto en palta con caviar negro y rojo.</p>
               </div>
             </div>
           </div>
