--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <p class="text-center">Somos una empresa joven en pleno crecimiento. <br> Trabajamos con ingredientes totalmente frescos y del dia, por eso reserva el <a href="./otros/envios.html">envio</a> con anticipo.<br> Nuestros cocineros son chefs profesionales recibidos.</p>
       </section>
       <footer class="footer-distributed bg-dark">
+        <div>
+          
+        </div>
         <div class="footer-left text-white">
 				  <p>Derechos de autor protegidos.</p>
 				</div>
@@ -82,6 +85,7 @@
           </div>
         </div>
       </footer>
+   <script src="./app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
